{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 14,
  "lineage": "1cd24edf-ee85-4517-07a6-15a62626e624",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02f1996f98634549b",
            "owner_id": "501768929654",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-06fa4637fac2aff8c"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00a631665b803f352",
            "owner_id": "501768929654",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f1996f98634549b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "vpc_id": "vpc-06fa4637fac2aff8c"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b9f0065312cb77c",
            "route_table_id": "rtb-00a631665b803f352",
            "subnet_id": "subnet-0a13084db8c1e4486"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b6c33b91e7ae34e",
            "route_table_id": "rtb-00a631665b803f352",
            "subnet_id": "subnet-014abe85e6d736d0e"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:501768929654:security-group/sg-0613e90ef3cc00bb0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0613e90ef3cc00bb0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "elb",
            "name_prefix": null,
            "owner_id": "501768929654",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-06fa4637fac2aff8c"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:501768929654:security-group/sg-0e9340b834a0610ac",
            "description": "my-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9340b834a0610ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.195.202.129/32",
                  "45.127.44.46/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "103.195.202.129/32",
                  "45.127.44.46/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "my-sg",
            "name_prefix": null,
            "owner_id": "501768929654",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-06fa4637fac2aff8c"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tomcat-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:501768929654:security-group/sg-0c5b1fbf7951333f3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c5b1fbf7951333f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "tomcat-sg",
            "name_prefix": null,
            "owner_id": "501768929654",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-06fa4637fac2aff8c"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:501768929654:subnet/subnet-0c9bbba6fda7feda9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-0c9bbba6fda7feda9",
            "map_public_ip_on_launch": false,
            "owner_id": "501768929654",
            "tags": {
              "Name": "Subnet-1"
            },
            "vpc_id": "vpc-06fa4637fac2aff8c"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:501768929654:subnet/subnet-057302cc66c399c94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.4.0/24",
            "id": "subnet-057302cc66c399c94",
            "map_public_ip_on_launch": false,
            "owner_id": "501768929654",
            "tags": {
              "Name": "Subnet-2"
            },
            "vpc_id": "vpc-06fa4637fac2aff8c"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:501768929654:subnet/subnet-0a13084db8c1e4486",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0a13084db8c1e4486",
            "map_public_ip_on_launch": true,
            "owner_id": "501768929654",
            "tags": {
              "Name": "Subnet-1"
            },
            "vpc_id": "vpc-06fa4637fac2aff8c"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:501768929654:subnet/subnet-014abe85e6d736d0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-014abe85e6d736d0e",
            "map_public_ip_on_launch": true,
            "owner_id": "501768929654",
            "tags": {
              "Name": "Subnet-2"
            },
            "vpc_id": "vpc-06fa4637fac2aff8c"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:501768929654:vpc/vpc-06fa4637fac2aff8c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-049ba82c2271c2f4a",
            "default_route_table_id": "rtb-080e49189a80a8aec",
            "default_security_group_id": "sg-00d671c28f491a496",
            "dhcp_options_id": "dopt-66b5c100",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06fa4637fac2aff8c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-080e49189a80a8aec",
            "owner_id": "501768929654",
            "tags": {
              "Name": "MyVPC"
            }
          }
        }
      ]
    }
  ]
}